optimzed db setings

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
-MONGO="mongodb://localhost:27017,localhost:27018,localhost:27019?replicaSet=rs"
+MONGO="mongodb://localhost:27017,localhost:27018,localhost:27019/arriveDb"
+MONGO1="mongodb+srv://gaurav:Gauravdefault@cluster0.nau5c.mongodb.net/arrive-challange?retryWrites=true&w=majority"
 
