--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=8080
 MONGO="mongodb://localhost:27017,localhost:27018,localhost:27019/arriveDb"
 MONGO1="mongodb+srv://gaurav:Gauravdefault@cluster0.nau5c.mongodb.net/arrive-challange?retryWrites=true&w=majority"
 
+NODE_ENV=local
+BASE_URL=http://localhost:8080/api/v1
