--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "dev": "nodemon --config nodemon.json src/server.ts",
+    "dev": "NODE_ENV=local nodemon --config nodemon.json src/server.ts",
     "start:build": "node build/src/server.js",
     "build": "tsc -p .",
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "http-status-codes": "^2.1.4",
     "mongoose": "^5.13.13",
     "mongoose-transact-utils": "^0.1.2",
     "morgan": "^1.10.0",
@@ -33,8 +35,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "0.0.45",
+    "@types/jest": "^27.0.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^13.13.52",
+    "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -42,7 +46,10 @@
     "eslint": "^8.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.5",
     "prettier": "^2.5.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.1",
     "typescript": "^3.9.10"
   }
 }
